--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -36,12 +36,15 @@
 .home-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    gap: 4rem; 
+    gap: 4rem;
     margin-bottom: 3rem;
     justify-content: center;
-    max-width: 1000px; 
+    max-width: 1500px;
     margin-left: auto;
     margin-right: auto;
+    background: linear-gradient(to bottom right, #e6e6e6 50%, #f8c8dc);
+    padding-left: 400px;
+    padding-right: 400px;
 }
 
 @media (min-width: 768px) {
@@ -184,3 +187,43 @@
         background-color: #800080;
         transform: scale(1.05);
     }
+
+.gradient-text {
+    background: linear-gradient(to right, #7b2cbf, #9d4edd);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+}
+
+.explorer-title i {
+    margin-right: 10px;
+    color: #ffb703;
+}
+
+.section-wrapper {
+    margin-bottom: 3rem;
+}
+
+.section-subtitle {
+    font-size: 1rem;
+    color: #a1a1a1;
+    margin-top: 0.5rem;
+    font-weight: 400;
+    text-align: center;
+}
+
+.header-section.left .section-subtitle {
+    text-align: left;
+}
+
+.section-divider {
+    height: 3px;
+    background: linear-gradient(to right, #9d4edd, #7b2cbf);
+    border-radius: 5px;
+    margin: 4rem 0 3rem;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0.6;
+}
+
