--- a/Views/GameRequests/Index.cshtml
+++ b/Views/GameRequests/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.RequestedAt)
             </th>
+            <th>
+                Requested By
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -48,6 +51,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.RequestedAt)
             </td>
+                <td>
+                    @item.RequestedByUser?.UserName ?? "Unknown"
+                </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
