half time commit

--- a/Views/Discussions/_NestedReplyPartial.cshtml
+++ b/Views/Discussions/_NestedReplyPartial.cshtml
@@ -14,6 +14,9 @@
                 }
             </div>
         </div>
+        @{
+            Console.WriteLine(Model.RootId);
+        }
 
         <div class="review-body-container">
             <div class="reply-meta">
