--- a/Views/Reviews/_NestedReplyPartial.cshtml
+++ b/Views/Reviews/_NestedReplyPartial.cshtml
@@ -29,9 +29,17 @@
             </div>
             <div class="review-interactions">
                 <div class="vote-controls">
-                    <button type="submit" class="vote-btn upvote"><i class="fas fa-thumbs-up"></i></button>
-                    <span class="vote-count">@Model.VoteNumber</span>
-                    <button type="submit" class="vote-btn downvote"><i class="fas fa-thumbs-down"></i></button>
+                    <form>
+                        <button type="button" class="vote-btn upvote" onclick="toggleUpvote(event, 'vote-count-@Model.Id', '@Model.Id')">
+                            <i class="fas fa-thumbs-up"></i>
+                        </button>
+                    </form>
+                    <span class="vote-count" id="vote-count-@Model.Id" data-state="0">@Model.VoteNumber</span>
+                    <form>
+                        <button type="button" class="vote-btn downvote" onclick="toggleDownvote(event, 'vote-count-@Model.Id', '@Model.Id')">
+                            <i class="fas fa-thumbs-down"></i>
+                        </button>
+                    </form>
                 </div>
                 <button class="reply-button" onclick="openReplyForm('@Model.Id')">
                     <i class="fas fa-reply"></i> Reply
@@ -77,3 +85,5 @@
         </div>
     </div>
 </div>
+
+            
